# agentmail-collab

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  SECURITY.zh-CN.md  cli.py  codex_bridge.py  daemon.py  mcp_server.py  models.py  pyproject.toml  service.py
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CHANNELS.md  CLI_REFERENCE.md  CODEX_BRIDGE.md  CONCEPTS.md  FAQ.md  INSTALL.md  MCP_REFERENCE.md  README.md  RELEASE.md  TESTING.md  TROUBLESHOOTING.md
docs/zh-CN/: ARCHITECTURE.md  CHANNELS.md  CLI_REFERENCE.md  CODEX_BRIDGE.md  CONCEPTS.md  FAQ.md  INSTALL.md  MCP_REFERENCE.md  README.md  RELEASE.md  TESTING.md  TROUBLESHOOTING.md
plugins/: README.md  sync_vendor.py
plugins/claude-marketplace/.claude-plugin/: marketplace.json
plugins/claude-marketplace/plugins/agentmail/: .mcp.json  README.md
plugins/claude-marketplace/plugins/agentmail/.claude-plugin/: plugin.json
plugins/claude-marketplace/plugins/agentmail/commands/: notify-start.md  notify-status.md  notify-stop.md  start.md  status.md
plugins/claude-marketplace/plugins/agentmail/skills/agentmail/: SKILL.md
plugins/codex-marketplace/.agents/plugins/: marketplace.json
plugins/codex-marketplace/plugins/agentmail/: .mcp.json  README.md
plugins/codex-marketplace/plugins/agentmail/.codex-plugin/: plugin.json
plugins/codex-marketplace/plugins/agentmail/skills/agentmail/: SKILL.md
scripts/: install-local.sh  validate.sh
skills/claude/: SKILL.md
skills/codex/: SKILL.md
tests/: __init__.py  test_cli.py  test_codex_bridge.py  test_daemon.py  test_mcp.py  test_notify.py  test_service.py
