[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmail-local"
version = "0.1.0"
description = "Local peer mailbox for Claude Code and Codex collaboration."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "AgentMail Contributors" }]
keywords = ["agentmail", "claude-code", "codex", "mcp", "collaboration"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]
dependencies = []

[project.scripts]
agentmail = "agentmail.cli:main"
agentmail-mcp = "agentmail.mcp_server:main"

[tool.setuptools]
packages = ["agentmail"]
package-dir = { "agentmail" = "." }

[tool.setuptools.package-data]
agentmail = ["py.typed"]
